fix(hero-about): adjust margin for better layout on mobile

--- a/src/components/about-components/hero-about/HeroAbout.css
+++ b/src/components/about-components/hero-about/HeroAbout.css
@@ -110,7 +110,7 @@ a.cta-button-about.connect {
     flex-direction: center;
     gap: 1.5rem;
     align-items: center;
-    margin-top: 2.2rem;
+    margin-bottom: -1rem;
   }
 
   .cta-button-about,
